fixed btn -size overlap

--- a/src/app/multiuser/friend-list/friend-list.component.css
+++ b/src/app/multiuser/friend-list/friend-list.component.css
@@ -18,3 +18,7 @@ img {
   cursor: pointer;
   margin-left: 10px;
 }
+.approve .reject {
+  width: 50px;
+  height: 20px;
+}
